--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input type="text" class="form__input" id="title" required>
         </fieldset>
         <fieldset class="form__button-container">
-          <input type="submit" class="form__button" value="Сохранить">
+          <button class="form__button">Сохранить</button>
         </fieldset>
       </form>
     </div>
@@ -28,13 +28,11 @@
     </header>
     <main class="main">
       <section class="profile">
-        <div class="profile__content">
+        <div class="profile__info">
           <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
-          <div class="profile__info">
-            <div class="profile__first-line">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-button opacity"></button>
-            </div>
+          <div class="profile__first-line">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button opacity"></button>
             <p class="profile__title">Исследователь океана</p>
           </div>
         </div>
