--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <div class="popup" id="edit-profle">
     <div class="popup__container">
       <button class="popup__close-button opacity" id="close-edit-popup"></button>
-      <form class="form">
+      <form class="form" name="profile" novalidate>
         <h3 class="form__heading">Редактировать профиль</h3>
         <fieldset class="form__input-container">
-          <input type="text" class="form__input" id="name" required>
-          <input type="text" class="form__input" id="title" required>
+          <input type="text" class="form__input" id="name" required minlength="2" maxlength="40">
+          <span class="form__input-error name-error">#</span>
+          <input type="text" class="form__input" id="title" required minlength="2" maxlength="200">
+          <span class="form__input-error title-error">#</span>
         </fieldset>
         <fieldset class="form__button-container">
           <button class="form__button">Сохранить</button>
@@ -25,20 +27,22 @@
   <div class="popup" id="add-card">
     <div class="popup__container">
       <button class="popup__close-button opacity" id="close-add-popup"></button>
-      <form class="form" id="create-card">
+      <form class="form" id="create-card" name="new-card" novalidate>
         <h3 class="form__heading">Новое место</h3>
         <fieldset class="form__input-container">
-          <input type="text" class="form__input" id="card-name" placeholder="Название" required>
-          <input type="text" class="form__input" id="image-link" placeholder="Ссылка на картинку" required>
+          <input type="text" class="form__input" id="card-name" placeholder="Название" required minlength="2" maxlength="30">
+          <span class="form__input-error card-name-error">#</span>
+          <input type="url" class="form__input" id="image-link" placeholder="Ссылка на картинку" required>
+          <span class="form__input-error image-link-error">#</span>
         </fieldset>
         <fieldset class="form__button-container">
-          <button class="form__button" >Создать</button>
+          <button class="form__button form__button_inactive" >Создать</button>
         </fieldset>
       </form>
     </div>
   </div>
   <div class="popup" id="opn-img">
-    <div class="popup__image-container">
+    <div class="popup__image-container popup__container">
       <button class="popup__close-button opacity" id="close-img-popup"></button>
       <img src="#" alt="#" class="popup__image">
       <p class="popup__title"></p>
@@ -78,5 +82,6 @@
     </div>
   </template>
   <script src="./script/index.js"></script>
+  <script src="./script/validate.js"></script>
 </body>
 </html>
