--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </form>
     </div>
   </div>
-  <div class="popup" id="opn-img">
+  <div class="popup popup__zoom-image" id="opn-img">
     <div class="popup__image-container popup__container">
       <button class="popup__close-button opacity" id="close-img-popup"></button>
       <img src="#" alt="#" class="popup__image">
