--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       </div>
     </div>
   </template>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
