--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <form class="form" name="profile" novalidate>
         <h3 class="form__heading">Редактировать профиль</h3>
         <fieldset class="form__input-container">
-          <input type="text" class="form__input" id="name" required minlength="2" maxlength="40">
+          <input type="text" class="form__input" id="name" required minlength="2" maxlength="40" placeholder="Имя">
           <span class="form__input-error name-error">#</span>
-          <input type="text" class="form__input" id="title" required minlength="2" maxlength="200">
+          <input type="text" class="form__input" id="title" required minlength="2" maxlength="200" placeholder="О себе">
           <span class="form__input-error title-error">#</span>
         </fieldset>
         <fieldset class="form__button-container">
