--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
 <body class="page">
@@ -13,9 +12,9 @@
       <form class="form" name="profile" novalidate>
         <h3 class="form__heading">Редактировать профиль</h3>
         <fieldset class="form__input-container">
-          <input type="text" class="form__input" id="name" required minlength="2" maxlength="40" placeholder="Имя">
+          <input type="text" name="name" class="form__input" id="name" required minlength="2" maxlength="40" placeholder="Имя">
           <span class="form__input-error name-error">#</span>
-          <input type="text" class="form__input" id="title" required minlength="2" maxlength="200" placeholder="О себе">
+          <input type="text" name="description" class="form__input" id="title" required minlength="2" maxlength="200" placeholder="О себе">
           <span class="form__input-error title-error">#</span>
         </fieldset>
         <fieldset class="form__button-container">
@@ -30,13 +29,13 @@
       <form class="form" id="create-card" name="new-card" novalidate>
         <h3 class="form__heading">Новое место</h3>
         <fieldset class="form__input-container">
-          <input type="text" class="form__input" id="card-name" placeholder="Название" required minlength="2" maxlength="30">
+          <input type="text" name="name" class="form__input" id="card-name" placeholder="Название" required minlength="2" maxlength="30">
           <span class="form__input-error card-name-error">#</span>
-          <input type="url" class="form__input" id="image-link" placeholder="Ссылка на картинку" required>
+          <input type="url" name="link" class="form__input" id="image-link" placeholder="Ссылка на картинку" required>
           <span class="form__input-error image-link-error">#</span>
         </fieldset>
         <fieldset class="form__button-container">
-          <button class="form__button form__button_inactive" >Создать</button>
+          <button class="form__button form__button_inactive">Создать</button>
         </fieldset>
       </form>
     </div>
@@ -50,12 +49,12 @@
   </div>
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" src="./images/mesto-logo.svg" alt="Место">
+      <img class="header__logo" src="<%=require('./images/mesto-logo.svg')%>" alt="Место">
     </header>
     <main class="main">
       <section class="profile">
         <div class="profile__info">
-          <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
+          <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
           <div class="profile__first-line">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button class="profile__edit-button opacity"></button>
@@ -81,6 +80,6 @@
       </div>
     </div>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
+  
 </body>
 </html>
