--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,32 @@
       </form>
     </div>
   </div>
+  <div class="popup" id="confirm">
+    <div class="popup__container popup__container_size_small">
+      <button class="popup__close-button opacity" id="close-confirm-popup"></button>
+      <form class="form" name="confirmation" novalidate>
+        <h3 class="form__heading">Вы уверены?</h3>
+        <fieldset class="form__button-container">
+          <button class="form__button">Да</button>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="upload-avatar">
+    <div class="popup__container popup__container_size_medium">
+      <button class="popup__close-button opacity" id="close-avatar-popup"></button>
+      <form class="form" id="avatar" name="change-avatar" novalidate>
+        <h3 class="form__heading">Обновить аватар</h3>
+        <fieldset class="form__input-container">
+          <input type="url" name="link" class="form__input" id="avatar-link" placeholder="Ссылка на картинку" required>
+          <span class="form__input-error avatar-link-error">#</span>
+        </fieldset>
+        <fieldset class="form__button-container">
+          <button class="form__button form__button_inactive">Сохранить</button>
+        </fieldset>
+      </form>
+    </div>
+  </div>
   <div class="popup zoom-image" id="opn-img">
     <div class="popup__image-container popup__container">
       <button class="popup__close-button opacity" id="close-img-popup"></button>
@@ -54,11 +80,13 @@
     <main class="main">
       <section class="profile">
         <div class="profile__info">
-          <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
+          <button class="profile__edit-avatar">
+            <img src="#" alt="Аватар" class="profile__avatar">
+          </button>
           <div class="profile__first-line">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button class="profile__edit-button opacity"></button>
-            <p class="profile__title">Исследователь океана</p>
+            <p class="profile__title"></p>
           </div>
         </div>
         <button class="profile__add-button opacity"></button>
@@ -76,7 +104,10 @@
       <button class="card__trash opacity"></button>
       <div class="card__elements">
         <h2 class="card__name"></h2>
-        <button class="card__like"></button>
+        <div class="card__like-container">
+          <button class="card__like"></button>
+          <p class="card__like-counter">#</p>
+        </div>
       </div>
     </div>
   </template>
